--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/icon" href="/logo.ico" />
+    <link rel="icon" type="image/icon" href="/src/assets/images/header-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>E.S Mukingi: in progress</title>
   </head>
